Fix price card alignment

--- a/support-frontend/assets/components/productOption/productOption.scss
+++ b/support-frontend/assets/components/productOption/productOption.scss
@@ -39,7 +39,7 @@
 
 .product-option__title {
   @include gu-fontset-heading;
-  margin-bottom: 16px;
+  margin-bottom: 24px;
   position: relative;
 
   @include mq(tablet) {
